<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>PanamaUring</name>
    <description>这是一个探索性用PanamaApi为Java提供完整且好用的io_uring生态的库</description>
    <url>https://github.com/dreamlike-ocean/PanamaUring</url>
    <groupId>io.github.dreamlike-ocean</groupId>
    <artifactId>PanamaUring</artifactId>
    <packaging>pom</packaging>
    <version>1.0</version>
    <properties>
        <java.version>22</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <panama.version>0.0.1</panama.version>
        <vertx.version>4.3.7</vertx.version>
        <vertx-async.version>3.0.0</vertx-async.version>
        <native-lib>3.0.0</native-lib>
        <mutiny.version>2.5.0</mutiny.version>
        <panama-generator>1.2</panama-generator>
    </properties>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/dreamlike-ocean/PanamaUring</url>
        <connection>https://github.com/dreamlike-ocean/PanamaUring.git</connection>
    </scm>
    <developers>
        <developer>
            <name>dreamlike-ocean</name>
            <id>dreamlike-ocean</id>
            <email>dreamlike.vertx@gmail.com</email>
            <roles>
                <role>owner</role>
            </roles>
            <timezone>+8</timezone>
        </developer>
    </developers>
    <modules>
        <module>panama-uring</module>
        <module>vertx-io-uring-ext</module>
        <module>native-lib</module>
        <module>panama-generator</module>
        <module>graal-native-example</module>
    </modules>
    <profiles>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.4.1</version>
                        <configuration>
                            <release>${java.version}</release>
                            <!-- jdk1.8要加上，1.7要去掉，否则会报错 -->
                            <additionalJOptions>
                                <additionalJOption>-Xdoclint:none</additionalJOption>
                                <additonalJOption>--enable-preview</additonalJOption>
                            </additionalJOptions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <distributionManagement>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                    <id>ossrh</id>
                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
            </distributionManagement>
        </profile>
    </profiles>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.smallrye.reactive</groupId>
                <artifactId>mutiny</artifactId>
                <version>${mutiny.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dreamlike-ocean</groupId>
                <artifactId>native-lib</artifactId>
                <version>${native-lib}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dreamlike-ocean</groupId>
                <artifactId>panama-uring</artifactId>
                <version>${panama.version}</version>
            </dependency>

            <dependency>
                <groupId>io.github.dreamlike-ocean</groupId>
                <artifactId>vertx-io-uring-ext</artifactId>
                <version>${vertx-async.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dreamlike-ocean</groupId>
                <artifactId>panama-generator</artifactId>
                <version>${panama-generator}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

</project>